navbar and hero

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
 * {
@@ -10,4 +8,7 @@
   padding: 0;
   box-sizing: border-box;
   background-color: #08000d;
+  font-family: "Inter", sans-serif;
+  font-family: "Krona One", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
