--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #08000d;
+  background-color: #09000e;
   font-family: "Inter", sans-serif;
   font-family: "Krona One", sans-serif;
   font-family: "Roboto", sans-serif;
