--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -4,7 +4,9 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid #161417;
-  padding: 1vh;
+  padding: 2vh;
+  font-size: 1em;
+  font-weight: lighter;
 }
 
 .brand {
@@ -14,7 +16,19 @@
 }
 
 .brandname {
-  color: #fafafc;
+  color: #c0bdc1;
+}
+
+.logospace {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  height: 5vh;
+  width: auto;
 }
 
 ul {
@@ -22,7 +36,7 @@ ul {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  color: #fafafc;
+  color: #c0bdc1;
 }
 
 li {
@@ -47,11 +61,14 @@ li:hover {
     rgba(139, 60, 197, 1) 100%
   );
   border: none;
-  color: #fafafc;
-  padding: 1vh 3.5vh 1vh 3.5vh;
+  color: #c0bdc1;
+  padding: 1vh 4vh 1vh 4vh;
   border-radius: 10vh;
+  font-size: 1em;
+  font-weight: lighter;
 }
 
 .button:hover {
   cursor: pointer;
+  color: #fafafc;
 }
