--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -5,12 +5,11 @@
   align-items: center;
   border-bottom: 2px solid #161417;
   padding: 2vh;
-  font-size: 1em;
-  font-weight: lighter;
 }
 
 .brandname {
   color: #c0bdc1;
+  font-weight: bold;
 }
 
 .logospace {
