Updated the Telegram page and fixed the Links

--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -39,12 +39,12 @@ li {
   font-weight: bold;
 }
 
-li:hover,
-a:hover {
+.navmenu:hover {
   cursor: pointer;
   color: #a30cfd;
 }
 
+.navmenu,
 a {
   text-decoration: none;
   color: #c0bdc1;
