--- a/client/src/assets/css/hero.css
+++ b/client/src/assets/css/hero.css
@@ -65,7 +65,7 @@
   margin: 0 20vh 0 0;
 }
 
-.herobutton {
+.secondary-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,9 +73,10 @@
   padding: 1vh 3.5vh 1vh 3.5vh;
   border-radius: 10vh;
   cursor: pointer;
+  margin: 2vh;
 }
 
-.join {
+.apply {
   background: rgb(61, 35, 140);
   background: linear-gradient(
     90deg,
@@ -83,20 +84,18 @@
     rgba(139, 60, 197, 1) 100%
   );
   border: none;
-  margin: 2vh;
 }
 
-.learn {
+.more {
   background: linear-gradient(#202528, #202528) padding-box,
     linear-gradient(90deg, rgba(61, 35, 140, 1) 0%, rgba(139, 60, 197, 1) 100%)
       border-box;
   border: 2px solid transparent;
-  margin: 2vh;
   color: #c0bdc1;
 }
 
-.join:hover,
-.learn:hover {
+.more:hover,
+.apply:hover {
   color: #fafafc;
 }
 
