--- a/client/src/assets/css/jobs.css
+++ b/client/src/assets/css/jobs.css
@@ -100,6 +100,7 @@
   justify-content: center;
   align-items: center;
   background-color: #202528;
+  margin: 1em;
 }
 
 .companylogo {
@@ -135,14 +136,14 @@
   background-color: #202528;
 }
 
+.info {
+  font-weight: bold;
+}
+
 .btnlist {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   background-color: #202528;
-}
-
-.button {
-  margin: 1vh;
 }
