--- a/client/src/assets/css/jobdetails.css
+++ b/client/src/assets/css/jobdetails.css
@@ -11,7 +11,11 @@
   padding: 1.5vh;
   z-index: 2;
   width: 25%;
-  background-color: #2e1c47;
+  /* background-color: #2e1c47; */
   border-radius: 2vh;
   border: 2px solid #c0bdc1;
+}
+
+.modal-header {
+  color: #c0bdc1;
 }
