--- a/client/src/assets/css/jobdetails.css
+++ b/client/src/assets/css/jobdetails.css
@@ -1,19 +1,19 @@
-.popup {
+.modal {
   width: 100vw;
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: fixed;
-  bottom: 2rem;
-  right: 2rem;
+  top: 5rem;
   padding: 1.5vh;
   z-index: 2;
-  width: 25%;
-  /* background-color: #2e1c47; */
+  width: 75%;
+  background-color: #181a1e;
   border-radius: 2vh;
   border: 2px solid #c0bdc1;
+  opacity: 95%;
 }
 
 .modal-header {
