--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -54,3 +54,25 @@ li:hover {
 .button:hover {
   cursor: pointer;
 }
+
+.signin {
+  position: relative;
+}
+
+.signin-menu {
+  position: absolute;
+  right: 0;
+  top: calc(100% + 0.5em);
+  background-color: #202528;
+  padding: 0.75em;
+  border-radius: 2vh;
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+}
+
+.signin-menu.show {
+  opacity: 1;
+  transform: translateY(0);
+}
