--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -7,26 +7,26 @@
   width: auto;
 }
 
-ul {
+.nav {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
 
-li {
+.nav > li {
   list-style-type: none;
   padding: 2vh;
   font-family: "Inter", sans-serif;
   font-weight: bold;
 }
 
-li:hover,
+.nav > li:hover,
 .signin:hover {
   cursor: pointer;
 }
 
-li:hover {
+.nav > li:hover {
   color: #a30cfd;
   border-bottom: 0.1em solid #939194;
   transform: scale(1.1, 1.1);
