--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -1,4 +1,6 @@
 .navbar {
+  position: sticky;
+  top: 0;
   border-bottom: 0.1em solid #939194;
 }
 
@@ -28,7 +30,7 @@
 
 .nav > li:hover {
   color: #a30cfd;
-  border-bottom: 0.1em solid #939194;
+  border-bottom: 0.1em solid #7d8da1;
   transform: scale(1.1, 1.1);
 }
 
@@ -63,7 +65,6 @@
   position: absolute;
   right: 0;
   top: calc(100% + 0.5em);
-  background-color: #202528;
   padding: 0.75em;
   border-radius: 2vh;
   box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.4);
