--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   box-sizing: border-box;
   /* background: hsla(285, 87%, 35%, 1);
@@ -28,5 +28,4 @@
 * {
   font-family: "Inter", sans-serif;
   font-family: "Roboto", sans-serif;
-  background: #181a1e;
 }
