--- a/client/src/assets/css/footer.css
+++ b/client/src/assets/css/footer.css
@@ -2,7 +2,7 @@
   color: #fff;
   font-size: 1.5em;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   width: 10%;
 }
