--- a/client/src/assets/css/jobdetails.css
+++ b/client/src/assets/css/jobdetails.css
@@ -4,7 +4,8 @@
 .modal {
   position: fixed;
   top: 8rem;
-
+  left: 50%;
+  transform: translateX(-50%);
   padding: 1em;
   z-index: 2;
   min-width: 50vw;
